# Ticket-Tracker

./: .gitignore  README.md
TicketTracer/: Cargo.toml
TicketTracer/frontend/: homepage.html  login.html  profile.html  project.html  styles.css
TicketTracer/src/: main.rs
TicketTracer/src/handlers/: account.rs  cust.rs  load.rs  mod.rs  projects.rs
TicketTracer/src/types/: mod.rs
