[package]
name = "TicketTracer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["json", "http1", "ws"] }
dotenvy = "0.15.7"
hyper = { version = "1.6.0", features = ["server"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_repr = "0.1"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.44.1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "full"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.12"
rand = { version = "0.9.0", features = ["serde"] }
tower = "0.5.2"
cookie = "0.18.1"
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-key-expansion", "cookie-private", "cookie-signed"] }
time = "0.3.41"
axum-server = { version = "0.7.2", features = ["tls-rustls", "tokio-rustls"] }
rustls = "0.23.25"
